<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bt_open_rw_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:backgroundTint="#00AA00"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/bt_open_rw_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_open_rw_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00AA00"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="@+id/bt_open_rw_one"
        app:layout_constraintEnd_toStartOf="@+id/bt_open_rw_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_open_rw_one" />

    <Button
        android:id="@+id/bt_open_rw_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00AA00"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="@+id/bt_open_rw_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_open_rw_two" />

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/bt_open_rw_two"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>